Added unit tests.

--- a/MetricsApp.xcodeproj/xcshareddata/xcschemes/MetricsApp.xcscheme
+++ b/MetricsApp.xcodeproj/xcshareddata/xcschemes/MetricsApp.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "55F4D6E22590704E002CDF2A"
+               BuildableName = "MetricsAppTests.xctest"
+               BlueprintName = "MetricsAppTests"
+               ReferencedContainer = "container:MetricsApp.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
